# FMConfigurationsCounter

./: .cproject  .gitignore  .project  BatchTestRunner.sh  ConstraintVisitor.cpp  FMBuilder.cpp  FMBuilderTest.cpp  NodeFeatureVisitor.cpp  README.md  Util.cpp  logger.cpp  meson.build  output.csv  output.xlsx
Other/: BatchTestRunner.sh  FMBuilder  FMBuilderExperimenter.cpp  NodeFeatureVisitor.cpp
Other/compile/: compile_commands.json
Other/examples/: ExamplePaperSPLC_BDD.xml  SimpleExamplePaperSPLC_BDD.xml  SimpleExamplePaperSPLC_MDD.xml  gplAheadModel.xml  gplModel.xml  ppuModel.xml
Other/include/: NodeFeatureVisitor.h  config.h  logger.hpp
benchmarks/: Mixed-3CNF-FM-200-80-1,00-SAT-10.xml  Mixed-3CNF-FM-200-80-1,00-SAT-11.xml  Mixed-3CNF-FM-200-80-1,00-SAT-20.xml  Mixed-3CNF-FM-200-80-1,00-SAT-4.xml  Mixed-3CNF-FM-200-80-1,00-SAT-8.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-1.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-12.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-14.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-16.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-18.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-2.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-20.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-5.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-7.xml  OnlyOR-3CNF-FM-200-80-1,00-SAT-1.xml  OnlyOR-3CNF-FM-200-80-1,00-SAT-13.xml  OnlyOR-3CNF-FM-200-80-1,00-SAT-18.xml  OnlyOR-3CNF-FM-200-80-1,00-SAT-19.xml  OnlyOR-3CNF-FM-200-80-1,00-SAT-2.xml  OnlyOR-3CNF-FM-200-80-1,00-SAT-4.xml  OnlyXOR-3CNF-FM-200-80-1,00-SAT-15.xml  OnlyXOR-3CNF-FM-200-80-1,00-SAT-16.xml  OnlyXOR-3CNF-FM-200-80-1,00-SAT-18.xml  OnlyXOR-3CNF-FM-200-80-1,00-SAT-19.xml  OnlyXOR-3CNF-FM-200-80-1,00-SAT-2.xml  OnlyXOR-3CNF-FM-200-80-1,00-SAT-20.xml  OnlyXOR-3CNF-FM-200-80-1,00-SAT-8.xml
benchmarks/FeatureIDE/: Mixed-3CNF-FM-200-80-1,00-SAT-11.xml  Mixed-3CNF-FM-200-80-1,00-SAT-13.xml  Mixed-3CNF-FM-200-80-1,00-SAT-14.xml  Mixed-3CNF-FM-200-80-1,00-SAT-15.xml  Mixed-3CNF-FM-200-80-1,00-SAT-17.xml  Mixed-3CNF-FM-200-80-1,00-SAT-2.xml  Mixed-3CNF-FM-200-80-1,00-SAT-20.xml  Mixed-3CNF-FM-200-80-1,00-SAT-3.xml  Mixed-3CNF-FM-200-80-1,00-SAT-4.xml  Mixed-3CNF-FM-200-80-1,00-SAT-6.xml  Mixed-3CNF-FM-200-80-1,00-SAT-7.xml  Mixed-3CNF-FM-200-80-1,00-SAT-8.xml  Mixed-3CNF-FM-200-80-1,00-SAT-9.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-11.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-13.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-14.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-17.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-18.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-19.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-2.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-3.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-5.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-9.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-1.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-10.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-2.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-20.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-3.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-4.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-5.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-6.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-7.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-8.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-9.xml  OnlyOR-3CNF-FM-100-90-0,90-SAT-1.xml  OnlyOR-3CNF-FM-100-90-0,90-SAT-10.xml  OnlyOR-3CNF-FM-100-90-0,90-SAT-11.xml  OnlyOR-3CNF-FM-100-90-0,90-SAT-12.xml  OnlyOR-3CNF-FM-100-90-0,90-SAT-13.xml  OnlyOR-3CNF-FM-100-90-0,90-SAT-14.xml  (+114 more)
benchmarks/SXFM/: Mixed-3CNF-FM-200-80-1,00-SAT-12.xml  Mixed-3CNF-FM-200-80-1,00-SAT-15.xml  Mixed-3CNF-FM-200-80-1,00-SAT-16.xml  Mixed-3CNF-FM-200-80-1,00-SAT-17.xml  Mixed-3CNF-FM-200-80-1,00-SAT-18.xml  Mixed-3CNF-FM-200-80-1,00-SAT-19.xml  Mixed-3CNF-FM-200-80-1,00-SAT-2.xml  Mixed-3CNF-FM-200-80-1,00-SAT-3.xml  Mixed-3CNF-FM-200-80-1,00-SAT-5.xml  Mixed-3CNF-FM-200-80-1,00-SAT-7.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-11.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-13.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-19.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-3.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-4.xml  OnlyAND-3CNF-FM-200-80-1,00-SAT-6.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-13.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-15.xml  OnlyOR-3CNF-FM-100-70-0,90-SAT-16.xml  (+120 more)
benchmarks_converter/: .classpath  .project
compile/: build.ninja
examples/: ExamplePaperSPLC.xml  ExamplePaperSPLC_BDD.xml  gplAheadModel.xml  gplTinyModel.xml  ppuModel.xml
experiments_results/: BenchmarksAnalysis_RQ1.ipynb  BenchmarksAnalysis_RQ2.ipynb  BenchmarksAnalysis_RQ3.ipynb  BenchmarksAnalysis_RQ4.ipynb  BenchmarksAnalysis_Timeouts.ipynb  FMAnalysis.ipynb  experiments.csv  results_with_bdds.csv  results_with_mdds.csv
fm_counter_mdd/src/: .cproject  .gitignore  .project  ConstraintVisitor.cpp  FMBuilderExperimenter.cpp  NodeFeatureVisitor.cpp  Util.cpp  logger.cpp  meson.build
fm_counter_mdd/src/compile/: build.ninja  compile_commands.json
fm_counter_mdd/src/compile/meson-info/: intro-targets.json
fm_counter_mdd/src/compile/meson-logs/: meson-log.txt
fm_counter_mdd/src/include/: ConstraintVisitor.h  NodeFeatureVisitor.h  Util.hpp  config.h  logger.hpp
fm_counter_mdd/src/subprojects/: catch2.wrap
include/: ConstraintVisitor.h  NodeFeatureVisitor.h  Util.hpp
(+119 files in other folders)
